--- a/paint.ui
+++ b/paint.ui
@@ -37,6 +37,10 @@
   <property name="windowTitle">
    <string>Paint</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>images/icon.png</normaloff>images/icon.png</iconset>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QGraphicsView" name="graphicsView">
@@ -109,7 +113,17 @@
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="text">
-        <string>Палитра</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>images/paletteButton.png</normaloff>images/paletteButton.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>100</width>
+         <height>100</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -146,7 +160,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Рахмер кисти : </string>
+          <string>Размер кисти : </string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
